--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Site settings
 title: "CARDALANDS"
 email:
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description:  "OPEN NEW WORLD SPACE EXPLORATION NFT ADVENTURE GAME"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
@@ -12,7 +9,7 @@ url: "" # the base hostname & protocol for your site
 owner:
 email: "cardalands@gmail.com"
 facebook_username:
-twitter_username:
+twitter_username: "CardalandsNFT"
 github_username:
 address:
   - line:
